# FlexFloat

./: .gitignore  CMakeLists.txt  CustomFP.cpp  README.md  Test.cpp  accumulator.cpp
include/: CustomFP.hpp
src/: CustomFP.cpp
test/: unit_test.cpp
